syntax = "proto2";

package shadow;

message BlobShape {
  repeated int32 dim = 1;
}

message Blob {
  repeated float data = 1 [packed = true];
  optional BlobShape shape = 2;
}

message ActivateParameter {
  enum ActivateType {
    Linear = 0;
    Relu = 1;
    Leaky = 2;
    PRelu = 3;
  }
  optional ActivateType type = 1 [default = Relu];
  optional bool channel_shared = 2 [default = false];
}

message BatchNormParameter {
  optional bool use_global_stats = 1 [default = true];
}

message BiasParameter {
  optional int32 axis = 1 [default = 1];
  optional int32 num_axes = 2 [default = 1];
}

message ConcatParameter {
  optional int32 axis = 1 [default = 1];
}

message ConnectedParameter {
  optional int32 num_output = 1;
  optional bool bias_term = 2 [default = true];
  optional bool transpose = 3 [default = false];
}

message ConvolutionParameter {
  optional int32 num_output = 1;
  optional int32 kernel_size = 2;
  optional int32 stride = 3 [default = 1];
  optional int32 pad = 4 [default = 0];
  optional int32 dilation = 5 [default = 1];
  optional int32 group = 6 [default = 1];
  optional bool bias_term = 7 [default = true];
}

message DataParameter {
  optional BlobShape data_shape = 1;
  optional float scale = 2 [default = 1];
  repeated float mean_value = 3;
}

message FlattenParameter {
  optional int32 axis = 1 [default = 1];
  optional int32 end_axis = 2 [default = -1];
}

message LRNParameter {
  enum NormRegion {
    AcrossChannels = 0;
    WithinChannel = 1;
  }
  optional int32 local_size = 1 [default = 5];
  optional float alpha = 2 [default = 1];
  optional float beta = 3 [default = 0.75];
  optional NormRegion norm_region = 4 [default = AcrossChannels];
  optional float k = 5 [default = 1];
}

message NormalizeParameter {
  optional bool across_spatial = 1 [default = true];
  optional bool channel_shared = 2 [default = true];
  repeated float scale = 3;
}

message PermuteParameter {
  repeated int32 order = 1;
}

message PoolingParameter {
  enum PoolType {
    Max = 0;
    Ave = 1;
  }
  optional PoolType pool = 1 [default = Max];
  optional int32 kernel_size = 2;
  optional int32 stride = 3 [default = 1];
  optional int32 pad = 4 [default = 0];
  optional bool global_pooling = 5 [default = false];
}

message PriorBoxParameter {
  repeated float min_size = 1;
  repeated float max_size = 2;
  repeated float aspect_ratio = 3;
  optional bool flip = 4 [default = true];
  optional bool clip = 5 [default = false];
  repeated float variance = 6;
  optional float step = 7;
  optional float offset = 8 [default = 0.5];
}

message ReorgParameter {
  optional int32 stride = 1 [default = 2];
}

message ReshapeParameter {
  optional BlobShape shape = 1;
  optional int32 axis = 2 [default = 0];
  optional int32 num_axes = 3 [default = -1];
}

message ScaleParameter {
  optional int32 axis = 1 [default = 1];
  optional int32 num_axes = 2 [default = 1];
  optional bool bias_term = 3 [default = false];
}

message SoftmaxParameter {
  optional int32 axis = 1 [default = 1];
}

message LayerParameter {
  optional string name = 1 [default = ""];
  optional string type = 2;
  repeated string bottom = 3;
  repeated string top = 4;

  repeated Blob blobs = 5;

  optional ActivateParameter activate_param = 11;
  optional BatchNormParameter batch_norm_param = 12;
  optional BiasParameter bias_param = 13;
  optional ConcatParameter concat_param = 14;
  optional ConnectedParameter connected_param = 15;
  optional ConvolutionParameter convolution_param = 16;
  optional DataParameter data_param = 17;
  optional FlattenParameter flatten_param = 18;
  optional LRNParameter lrn_param = 19;
  optional NormalizeParameter normalize_param = 20;
  optional PermuteParameter permute_param = 21;
  optional PoolingParameter pooling_param = 22;
  optional PriorBoxParameter prior_box_param = 23;
  optional ReorgParameter reorg_param = 24;
  optional ReshapeParameter reshape_param = 25;
  optional ScaleParameter scale_param = 26;
  optional SoftmaxParameter softmax_param = 27;
}

message NetParameter {
  optional string name = 1;

  repeated LayerParameter layer = 11;
}
